Resolved last merge conflicts